[package]
name = "claschega"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
rand = "0.9"
tokio-tungstenite = "0.20"
futures-util = "0.3"

[workspace]
members = ["logic"]
